--- a/AP8-ejercicio5.html
+++ b/AP8-ejercicio5.html
@@ -7,10 +7,24 @@
 </head>
 
 <body>
-
+		<h1>Chopin</h1>
 		<figure>
 			<img src="../recursos/chopin1.jpg" alt="Imagen de Chopin">
 		</figure>
+
+		<br>
+
+		<h3>Nocturno en Si bemol menor, Op. 9, n.º 1</h3>
+		<audio src="../recursos/chopin-nocturno1.mp3" type="audio/mp3" loop controls="controls"></audio>
+
+		<br>
+
+		<h3>Video para acompañar</h3>
+		<video src="../recuros/luna1.mp4" type="video/mp4" controls="controls"></video>
+
+		<h3>Chopin Nocturne Op.9 No.2 (Arthur Rubinstein)</h3>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/Nu48Z45ibxQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		
 	
 </body>
 
