--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Enlace a una página externa -->
 				<li><a href="AP8-ejercicio3">Ejercicio 3 (listas)</a></li>
 				<!-- Enlace a una página externa en otra ventana/pestaña-->
-				<li><a target="_blak" href= "AP8-ejercicio4">Ejercicio 4 (vínculos)</a></li>
+				<li><a target="_blank" href= "AP8-ejercicio4">Ejercicio 4 (vínculos)</a></li>
 				<!-- A un punto inferior de la página actual-->
 				<li><a href="AP8-ejercicio5">Ejercicio 5 (multimedia)</a></li>
 			</ul>
