Corrigo enlaces en varias páginas

--- a/AP8-ejercicio4.html
+++ b/AP8-ejercicio4.html
@@ -17,12 +17,12 @@
 				<li><a href="http://www.floridauniversitaria.es">Florida Universitària
 				</a></li>
 				<!-- Enlace a una página externa en otra ventana/pestaña-->
-				<li><a target="_blak" href= "http://www.floridauniversitaria.es">Florida Universitària 2</a></li>
+				<li><a target="_blank" href= "http://www.floridauniversitaria.es">Florida Universitària 2</a></li>
 				<!-- A un punto inferior de la página actual-->
 				<li><a href= "#parrafo_objetivo">Baja</a></li>
 				<!-- Enlace a otro archivo de nuestro sitio web-->
 				<li><a href="AP8-ejercicio3">AP8 Ejercicio 3</a></li>
-				<li><a href="index">Volver a índice</a></li>
+				<li><a href="index.html">Volver a índice</a></li>
 				<li>Contacto</li>
 			</ul>
 
