--- a/AP8-ejercicio3.html
+++ b/AP8-ejercicio3.html
@@ -26,6 +26,7 @@
 				<li>Quienes somos</li>
 				<li>Contacto</li>
 			</ol>
+			<a target="index">Volver a índice</a>
 		</nav>
 	</header>
 </body>
