Corrigo AP8-ejercicio3 y AP8-ejercicio5

--- a/AP8-ejercicio3.html
+++ b/AP8-ejercicio3.html
@@ -26,7 +26,7 @@
 				<li>Quienes somos</li>
 				<li>Contacto</li>
 			</ol>
-			<a href="index">Volver a índice</a>
+			<a href="index">Volver al índice</a>
 		</nav>
 	</header>
 </body>
