--- a/AP8-ejercicio5.html
+++ b/AP8-ejercicio5.html
@@ -20,7 +20,7 @@
 		<br>
 
 		<h3>Video para acompañar</h3>
-		<video width="560" height="315" controls>
+		<video width="560" height="315" controls loop>
     		<source src="../recursos/luna1.mp4" type="video/mp4">
 		</video>
 
