Añado loop y autoplay a videos de AP8-ejercicio5

--- a/AP8-ejercicio5.html
+++ b/AP8-ejercicio5.html
@@ -15,12 +15,12 @@
 		<br>
 
 		<h3>Nocturno en Si bemol menor, Op. 9, n.º 1</h3>
-		<audio src="../recursos/chopin-nocturno1.mp3" type="audio/mp3" controls="controls"></audio>
+		<audio src="../recursos/chopin-nocturno1.mp3" type="audio/mp3" controls autoplay></audio>
 
 		<br>
 
 		<h3>Video para acompañar</h3>
-		<video width="560" height="315" controls loop>
+		<video width="560" height="315" controls autoplay loop>
     		<source src="../recursos/luna1.mp4" type="video/mp4">
 		</video>
 
