Modifico AP8-ejercicio5 (ajusto etiquetas audio y video)

--- a/AP8-ejercicio5.html
+++ b/AP8-ejercicio5.html
@@ -15,13 +15,17 @@
 		<br>
 
 		<h3>Nocturno en Si bemol menor, Op. 9, n.º 1</h3>
-		<audio src="../recursos/chopin-nocturno1.mp3" type="audio/mp3" controls autoplay></audio>
+		<audio controls autoplay>
+  			<source src="../recursos/chopin-nocturno1.mp3" type="audio/mp3">
+  			Tu navegador no soporta HTML5 audio.
+		</audio>
 
 		<br>
 
 		<h3>Video para acompañar</h3>
-		<video width="560" height="315" controls autoplay loop>
+		<video width="560" height="315" controls loop>
     		<source src="../recursos/luna1.mp4" type="video/mp4">
+    		Tu navegador no soporta HTML5 video.
 		</video>
 
 		<h3>Nocturno en mi bemol mayor, Op. 9, n.º 2 (Interpretado por Arthur Rubinstein)</h3>
