--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<!-- Head con el uso de etiqutas meta (descripción, palabras clave, autor y 
-	viewport, para layout multidispositivo), enlaces a fuentes de Google para su uso en la web, 
-	uso de normalize.css y el script modernizr-custom.js, relación a la hoja de estilos, favicon
-	y título. -->
+<!-- Head con el uso de etiqutas meta (descripción, palabras clave, autor y viewport, para layout multidispositivo), enlaces a fuentes de Google para su uso en la web, uso de normalize.css y el script modernizr-custom.js, relación a la hoja de estilos, favicon y título. -->
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +14,7 @@
 	<script src="vendor/modernizr-custom.js"></script>
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" type="image/png" href="images/favicon_camera.png">
-	<title>Contact | OUTERHOUND - Street Photography</title>
+	<title>Contacto | OUTERHOUND - Street Photography</title>
 </head>
 
 <!-- Body de clase "contact" para la definición de ciertas características que sólo se aplican al 
@@ -32,7 +29,7 @@
 				<li><a href="index.html">Inicio</a></li>
 				<li><a href="info.html">Información</a></li>
 				<li><a href="photos.html">Fotografías</a></li>
-				<li><a href="contact.html">Contacto</a></li>
+				<li><a href="contact.html" class="active">Contacto</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -69,16 +66,13 @@
 			<p><cite>“Si pudiera decirlo con palabras,<br/> no iría todos los días cargado con mi cámara”</cite><br/><p class="autor">Lewis Hine</p>
 			<br/>
 			<p><cite>“La fotografia es un secreto de un secreto.<br/> Cuanto más te dice, menos sabes”</cite><br/><p class="autor">Diane Arbus</p>
-			<br/>
-			<p><cite>“No me interesa la fotografia sino la vida”</cite><br/><p class="autor">Henri Cartier-Bresson</p>
-			
 		</aside>
 
 	</section>
 
 	<footer class="pie">
 		<p>© Alejandro García - 2021 | Instagram</p>
-		<a target="_blank" href="https://www.instagram.com/outerhound/"><img src="images/logo_instagram.png" alt="Logo de Instagram" style="width:10px;height:10px;"></a>
+		<a target="_blank" href="https://www.instagram.com/outerhound/"><img src="images/logo_instagram.png" alt="Logo de Instagram" style="width: 9px; height: 9px;"></a>
 	</footer>
 
 </body>
