--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<!-- Head con el uso de etiqutas meta (descripción, palabras clave, autor y 
-	viewport, para layout multidispositivo), enlaces a fuentes de Google para su uso en la web, 
-	uso de normalize.css y el script modernizr-custom.js, relación a la hoja de estilos, favicon
-	y título. -->
+<!-- Head con el uso de etiqutas meta (descripción, palabras clave, autor y viewport, para layout multidispositivo), enlaces a fuentes de Google para su uso en la web, uso de normalize.css y el script modernizr-custom.js, relación a la hoja de estilos, favicon y título. -->
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,8 +18,7 @@
 </head>
 
 
-<!-- Body de clase "main" para la definición de ciertas características que sólo se aplican al 
-	body de la página principal o index (imagen de fondo a pantalla completa) -->
+<!-- Body de clase "main" para la definición de ciertas características que sólo se aplican al body de la página principal o index (imagen de fondo a pantalla completa) -->
 <body class="main">
 
 	<!-- Navegador dentro de header, con vínculos listados-->
@@ -30,7 +26,7 @@
 		<nav>
 			<a href="index.html" class="logo">OUTERHOUND</a>
 			<ul>
-				<li><a href="index.html">Inicio</a></li>
+				<li><a href="index.html" class="active">Inicio</a></li>
 				<li><a href="info.html">Información</a></li>
 				<li><a href="photos.html">Fotografías</a></li>
 				<li><a href="contact.html">Contacto</a></li>
@@ -46,7 +42,7 @@
 	<!-- Footer de clase "piemain", con unos atributos especiales al ser el footer de la página principal -->
 	<footer class="piemain">
 		<p>© Alejandro García - 2021 | Instagram</p>
-		<a target="_blank" href="https://www.instagram.com/outerhound/"><img src="images/logo_instagram.png" alt="Logo de Instagram" style="width:10px;height:10px;"></a>
+		<a target="_blank" href="https://www.instagram.com/outerhound/"><img src="images/logo_instagram.png" alt="Logo de Instagram" style="width: 9px; height: 9px;"></a>
 	</footer>
 
 </body>
