--- a/photos.html
+++ b/photos.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<!-- Head con el uso de etiqutas meta (descripción, palabras clave, autor y 
-	viewport, para layout multidispositivo), enlaces a fuentes de Google para su uso en la web, 
-	uso de normalize.css y el script modernizr-custom.js, relación a la hoja de estilos, favicon
-	y título. -->
-<!-- Esta página contiene dos script adicionales, jquery.js y lity.js, que aportan una 
-	funcionalidad "lightbox" para el visionado de elementos multimedia en pantalla. -->
+<!-- Head con el uso de etiqutas meta (descripción, palabras clave, autor y viewport, para layout multidispositivo), enlaces a fuentes de Google para su uso en la web, uso de normalize.css y el script modernizr-custom.js, relación a la hoja de estilos, favicon y título. -->
+<!-- Esta página contiene dos script adicionales, jquery.js y lity.js, que aportan una funcionalidad "lightbox" para el visionado de elementos multimedia en pantalla. -->
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +18,7 @@
 	<link rel="stylesheet" href="dist/lity.css">
 	<script src="vendor/jquery.js"></script>
 	<script src="dist/lity.js"></script>
-	<title>Photos | OUTERHOUND - Street Photography</title>
+	<title>Fotografías | OUTERHOUND - Street Photography</title>
 </head>
 
 <body>
@@ -34,7 +30,7 @@
 			<ul>
 				<li><a href="index.html">Inicio</a></li>
 				<li><a href="info.html">Información</a></li>
-				<li><a href="photos.html">Fotografías</a></li>
+				<li><a href="photos.html" class="active">Fotografías</a></li>
 				<li><a href="contact.html">Contacto</a></li>
 			</ul>
 		</nav>
@@ -52,35 +48,35 @@
 		<div class="fila">
 
 			<div class="columna">
-				<a href="images/photo_gallery1.jpg" data-lity><img class="zoom" alt="photo 1" src="images/photo_gallery1.jpg"/></a>
-				<a href="images/photo_gallery2.jpg" data-lity><img class="zoom" alt="photo 2" src="images/photo_gallery2.jpg"/></a>
-				<a href="images/photo_gallery3.jpg" data-lity><img class="zoom" alt="photo 3" src="images/photo_gallery3.jpg"/></a>
-				<a href="images/photo_gallery8.jpg" data-lity><img class="zoom" alt="photo 4" src="images/photo_gallery8.jpg"/></a>
-				<a href="images/photo_gallery9.jpg" data-lity><img class="zoom" alt="photo 5" src="images/photo_gallery9.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery1.jpg" data-lity><img class="zoom" alt="photo 1" title="photo 1" src="https://algacu.github.io/images/photo_gallery1.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery2.jpg" data-lity><img class="zoom" alt="photo 2" title="photo 2" src="https://algacu.github.io/images/photo_gallery2.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery3.jpg" data-lity><img class="zoom" alt="photo 3" title="photo 3" src="https://algacu.github.io/images/photo_gallery3.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery8.jpg" data-lity><img class="zoom" alt="photo 4" title="photo 4" src="https://algacu.github.io/images/photo_gallery8.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery9.jpg" data-lity><img class="zoom" alt="photo 5" title="photo 5" src="https://algacu.github.io/images/photo_gallery9.jpg"/></a>
 			</div>
 
 			<div class="columna">
-				<a href="images/photo_gallery10.jpg" data-lity><img class="zoom" alt="photo 6" src="images/photo_gallery10.jpg"/></a>
-				<a href="images/photo_gallery24.jpg" data-lity><img class="zoom" alt="photo 7" src="images/photo_gallery24.jpg"/></a>
-				<a href="images/photo_gallery19.jpg" data-lity><img class="zoom" alt="photo 8" src="images/photo_gallery19.jpg"/></a>
-				<a href="images/photo_gallery5.jpg" data-lity><img class="zoom" alt="photo 9" src="images/photo_gallery5.jpg"/></a>
-				<a href="images/photo_gallery20.jpg" data-lity><img class="zoom" alt="photo 10" src="images/photo_gallery20.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery10.jpg" data-lity><img class="zoom" alt="photo 6" title="photo 6" src="https://algacu.github.io/images/photo_gallery10.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery24.jpg" data-lity><img class="zoom" alt="photo 7" title="photo 7" src="https://algacu.github.io/images/photo_gallery24.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery19.jpg" data-lity><img class="zoom" alt="photo 8" title="photo 8" src="https://algacu.github.io/images/photo_gallery19.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery5.jpg" data-lity><img class="zoom" alt="photo 9" title="photo 9" src="https://algacu.github.io/images/photo_gallery5.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery20.jpg" data-lity><img class="zoom" alt="photo 10" title="photo 10" src="https://algacu.github.io/images/photo_gallery20.jpg"/></a>
 			</div>
 
 			<div class="columna">
-				<a href="images/photo_gallery4.jpg" data-lity><img class="zoom" alt="photo 11" src="images/photo_gallery4.jpg"/></a>
-				<a href="images/photo_gallery13.jpg" data-lity><img class="zoom" alt="photo 12" src="images/photo_gallery13.jpg"/></a>
-				<a href="images/photo_gallery21.jpg" data-lity><img class="zoom" alt="photo 13" src="images/photo_gallery21.jpg"/></a>
-				<a href="images/photo_gallery6.jpg" data-lity><img class="zoom" alt="photo 14" src="images/photo_gallery6.jpg"/></a>
-				<a href="images/photo_gallery26.jpg" data-lity><img class="zoom" alt="photo 15" src="images/photo_gallery26.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery4.jpg" data-lity><img class="zoom" alt="photo 11" title="photo 11" src="https://algacu.github.io/images/photo_gallery4.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery13.jpg" data-lity><img class="zoom" alt="photo 12" title="photo 12" src="https://algacu.github.io/images/photo_gallery13.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery21.jpg" data-lity><img class="zoom" alt="photo 13" title="photo 13" src="https://algacu.github.io/images/photo_gallery21.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery6.jpg" data-lity><img class="zoom" alt="photo 14" title="photo 14" src="https://algacu.github.io/images/photo_gallery6.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery26.jpg" data-lity><img class="zoom" alt="photo 15" title="photo 15" src="https://algacu.github.io/images/photo_gallery26.jpg"/></a>
 			</div>
 
 			<div class="columna">
-				<a href="images/photo_gallery7.jpg" data-lity><img class="zoom" alt="photo 16" src="images/photo_gallery7.jpg"/></a>
-				<a href="images/photo_gallery12.jpg" data-lity><img class="zoom" alt="photo 17" src="images/photo_gallery12.jpg"/></a>
-				<a href="images/photo_gallery14.jpg" data-lity><img class="zoom" alt="photo 18" src="images/photo_gallery14.jpg"/></a>
-				<a href="images/photo_gallery15.jpg" data-lity><img class="zoom" alt="photo 19" src="images/photo_gallery15.jpg"/></a>
-				<a href="images/photo_gallery11.jpg" data-lity><img class="zoom" alt="photo 20" src="images/photo_gallery11.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery7.jpg" data-lity><img class="zoom" alt="photo 16" title="photo 16" src="https://algacu.github.io/images/photo_gallery7.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery12.jpg" data-lity><img class="zoom" alt="photo 17" title="photo 17" src="https://algacu.github.io/images/photo_gallery12.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery14.jpg" data-lity><img class="zoom" alt="photo 18" title="photo 18" src="https://algacu.github.io/images/photo_gallery14.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery15.jpg" data-lity><img class="zoom" alt="photo 19" title="photo 19" src="https://algacu.github.io/images/photo_gallery15.jpg"/></a>
+				<a href="https://algacu.github.io/images/photo_gallery11.jpg" data-lity><img class="zoom" alt="photo 20" title="photo 20" src="https://algacu.github.io/images/photo_gallery11.jpg"/></a>
 			</div>
 
 		</div>
@@ -89,7 +85,7 @@
 
 	<footer class="pie">
 		<p>© Alejandro García - 2021 | Instagram</p>
-		<a target="_blank" href="https://www.instagram.com/outerhound/"><img src="images/logo_instagram.png" alt="Logo de Instagram" style="width:10px;height:10px;"></a>
+		<a target="_blank" href="https://www.instagram.com/outerhound/"><img src="images/logo_instagram.png" alt="Logo de Instagram" style="width: 9px; height: 9px;"></a>
 	</footer>
 
 </body>
