--- a/info.html
+++ b/info.html
@@ -54,7 +54,7 @@
 				<p class="textoinfo">Graduado en <b>Comunicación Audiovisual</b> por la Universidad de Valencia. Actualmente estudio el Ciclo Formativo de Grado Superior de <b>Desarrollo de Aplicaciones Multiplataforma en Florida Universitaria</b>, donde busco ampliar y mejorar mis conocimientos en el desarrollo de programas y páginas web. Las competencias adquiridas hasta el momento me han permitido crear este <em>portfolio online</em>  de mi trabajo como fotógrafo callejero.</p>
 				<br/>
 				<h2>Miradas callejeras</h2>
-				<p class="textoinfo">Cómo vemos el mundo es causa y consecuencia de cómo somos. Nuestra mirada presente moldea la realidad en base a experiencias pasadas y expectativas futuras. Es por ello que no hay dos miradas iguales. La fotografía nos ayuda a capturar instantes únicos, creando imágenes que sólo tienen sentido a ojos de experiencias y expectativas concretas. El acto fotográfico se convierte así en un ejercicio de reflexión sobre el pasado, desde un momento presente, con la mirada puesta en el futuro.</p>
+				<p class="textoinfo">Nuestra mirada moldea el mundo a través de experiencias pasadas y expectativas futuras. La fotografía nos ayuda a capturar esos instantes únicos, creando imágenes que sólo tienen sentido a ojos de experiencias y expectativas concretas. El acto fotográfico se convierte así en un ejercicio de reflexión sobre el pasado, desde un momento presente, con la mirada puesta en el futuro.</p>
 				<br/>
 
 				<a class="instagram" target="_blank" href="https://www.instagram.com/outerhound/"><img src="images/logo_instagram.png" alt="Logo de Instagram" title="Instagram" width="40px" height="40px"></a>
