--- a/info.html
+++ b/info.html
@@ -30,7 +30,8 @@
 			<ul>
 				<li><a href="index.html">Inicio</a></li>
 				<li><a href="info.html" class="active">Información</a></li>
-				<li><a href="photos.html">Fotografías</a></li>
+				<li><a href="photos1.html">Blanco y Negro</a></li>
+				<li><a href="photos2.html">Color</a></li>
 				<li><a href="contact.html">Contacto</a></li>
 			</ul>
 		</nav>
@@ -54,7 +55,7 @@
 				<p class="textoinfo">Graduado en <b>Comunicación Audiovisual</b> por la Universidad de Valencia. Actualmente estudio el Ciclo Formativo de Grado Superior de <b>Desarrollo de Aplicaciones Multiplataforma en Florida Universitaria</b>, donde busco ampliar y mejorar mis conocimientos en el desarrollo de programas y páginas web. Las competencias adquiridas hasta el momento me han permitido crear este <em>portfolio online</em>  de mi trabajo como fotógrafo callejero.</p>
 				<br/>
 				<h2>Miradas callejeras</h2>
-				<p class="textoinfo">Nuestra mirada moldea el mundo a través de experiencias pasadas y expectativas futuras. La fotografía nos ayuda a capturar esos instantes únicos, creando imágenes que sólo tienen sentido a ojos de experiencias y expectativas concretas. El acto fotográfico se convierte así en un ejercicio de reflexión sobre el pasado, desde un momento presente, con la mirada puesta en el futuro.</p>
+				<p class="textoinfo">Nuestra mirada moldea el mundo a través de experiencias y expectativas. La fotografía nos ayuda a capturar esos instantes únicos, creando imágenes que sólo tienen sentido al ojo humano. El acto fotográfico se convierte así en un ejercicio de reflexión sobre el pasado, desde un momento presente, con la mirada puesta en el futuro.</p>
 				<br/>
 
 				<a class="instagram" target="_blank" href="https://www.instagram.com/outerhound/"><img src="images/logo_instagram.png" alt="Logo de Instagram" title="Instagram" width="40px" height="40px"></a>
