--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 			<ul>
 				<li><a href="index.html" class="active">Inicio</a></li>
 				<li><a href="info.html">Información</a></li>
-				<li><a href="photos.html">Fotografías</a></li>
+				<li><a href="photos1.html">Blanco y Negro</a></li>
+				<li><a href="photos2.html">Color</a></li>
 				<li><a href="contact.html">Contacto</a></li>
 			</ul>
 		</nav>
