--- a/photos1.html
+++ b/photos1.html
@@ -30,7 +30,8 @@
 			<ul>
 				<li><a href="index.html">Inicio</a></li>
 				<li><a href="info.html">Información</a></li>
-				<li><a href="photos.html" class="active">Fotografías</a></li>
+				<li><a href="photos1.html">Blanco y Negro</a></li>
+				<li><a href="photos2.html">Color</a></li>
 				<li><a href="contact.html">Contacto</a></li>
 			</ul>
 		</nav>
